client/laundroclean/src/components/ui/Forms/AuthForm.module.css
.form {
  background-color: rgba(255, 255, 255, 0.20);
  padding: 2rem;
  border-radius: 12px;
  width: 600px;
  display: flex;
  flex-direction: column;
  gap: 1.5rem;
  box-shadow: 0 8px 20px rgba(0, 0, 0, 0.1);
  position: relative;
}

.formactions {
  display: flex;
  flex-direction: column;
  gap: 1rem;
  justify-content: center;
  align-items: center;
}

.form legend {
  display: flex;
  flex-direction: column;
  align-self: center;
  justify-self: center;
  text-align: center;
  gap: 0.5rem;
}

.form p {
  display: flex;
  flex-direction: column;
  gap: 0.5rem;
}

.form input {
  padding: 0.5rem 1rem;
  border-radius: 6px;
  border: 1px solid #ccc;
  font-size: 16px;
}

.form span {
  display: flex;
  align-self: center;
  color: #000
}

.inputWrapper {
  margin-bottom: 1rem;
  position: relative;
}

.passwordWrapper {
  position: relative;
  width: 100%;
}

.passwordWrapper input {
  width: 100%;
  padding-right: 2.5rem;
  box-sizing: border-box;
}

.showPasswordButton {
  position: absolute;
  right: 0.5rem;
  top: 50%;
  transform: translateY(-50%);
  background: none;
  border: none;
  cursor: pointer;
  color: #555;
  padding: 0;
  display: flex;
  align-items: center;
  justify-content: center;
}


@media (min-width: 550px) and (max-width: 900px) {
  .form {
    width: 400px;
  }
}

@media (max-width: 500px) {
  .form {
    width: 300px;
  }
}

